Revision history for PostScript-Report

0.09   NOT
	- Use the improved API in PostScript::File 2.10

0.08   July 20, 2010
	- Added first_footer attribute
	- Added "split" as a possible value for footer_align
	- Include more report attributes in dump output
	- Fixed bug in calculating required page count
	  (could cause report footer to overlap report)

0.07   June 19, 2010
	- Added extra_styles & get_style, which allows Components to
	  inherit attributes without Containers and the Report needing
	  to know every possible attribute
	- Removed label_font from Report & Component
	  (It's only used by FieldTL, and can be handled by extra_styles.)

0.06   March 26, 2010
	- Added the LinkField component
	- Added the metrics attribute to Font
	- Fixed Image to round calculated dimensions to nearest point
	  (A Component's height & width must be integers.)

0.05   February 26, 2010
	- Use PostScript::File::Metrics (requires PostScript::File 2.00)
	  You no longer need Font::AFM to get word wrapping.
	- Call pstr as a method to take advantage of auto_hyphen
	  processing in PostScript::File 2.00.	You should read
	  Hyphens and Minus Signs in PostScript::File's documentation.
	- Fixed memory leak (Font should have used a weak reference)
	- Fixed Image to correctly initialize graphics state for EPS file
	- Added get__PostScript_File method for PostScript::Convert
	- Added examples/pdf_image.pl showing PostScript::Convert usage
	- Require Moose 0.90 instead of MooseX::AttributeHelpers

0.04   October 29, 2009
	- You can now indicate which sides should have a border
	- You can now omit \%data and/or \@rows when calling run
	- Use cp1252 encoding (requires PostScript::File 1.05)
	- Fixed crash caused by a VBox with only 1 child

0.03   October 28, 2009
	- Added background attribute to Component
	- Added detail_background attribute to Report
	- Added stripe & stripe_page to Builder
	- Add PageOrder: Ascend comment
	- Fixed bug in multiline FieldTL (was using wrong line height)